css/styles.css
*, ::before, ::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    background-color: black;
    /* border: 2px solid white; */
    scroll-behavior: smooth;
}

body {
    position: relative;
    top: 200px;
    left: 0;
    right: 0;
    bottom: 0;
    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
    overflow: hidden;
    overflow-y: scroll;
}

main {
    position: fixed;
    top: 200px;
    left: 0;
    right: 0;
    bottom: 0;
    display: flex; 
    margin: 0 auto;
    flex-direction: column;
    max-width: 1000px;
    overflow-y: scroll;
}

#sec1 {
    scroll-: 400px;
}

header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1;
}

#nav-bar {
    /* position: fixed; */
    width: 100%;
    height: 200px;
    display: flex;
    justify-content: space-between;
    /* border: 2px solid white; */
    margin: 0 auto;
    max-width: 1000px;

}

.logo {
    width: 200px;
    height: 100%;
    /* border: 2px solid black; */
    min-width: 200px;
    padding: 5px;
}

.logo img {
    width: 100%;
    height: 100%;
    border-radius: 25%;
}

.link-container {
   /* margin-top: 35px; */
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   width: 600px;
}

.nav-link {
    /* margin-right: 50px; */
}

.nav-link a {
    text-decoration: none;
    color: #ff66c4;
    padding: 8px;
    border-radius: 5px;
    font-size: 1.5rem;
    font-weight: 600;
}

.nav-link a:hover {
    background: linear-gradient(#ff66c4, black 100%);
    color: black;
}

#form {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-direction: column;
    color: lightgrey;
    /* border: 2px solid white; */
    margin-bottom: 30px;
    gap: 10px;
}

#form h2 {
    font-weight: 600;
    background: linear-gradient(45deg,#ff66c4, rgba(242, 217, 184, .9), #ff66c4);
    background-size: 400%;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: gradient 10s linear infinite;
}

@keyframes gradient {
	0% {
		background-position: 400%;
	}
	
	100% {
		background-position: 0%;
	}
}


#form input {
    color: lightgrey;
    height: 40px;
    width: 300px;
    padding: .7rem .6rem;
    font-size: 1.2rem;
    border: 2px solid lightgrey;
    border-radius: 5px;
}

input:focus {
    outline-color: rgba(242, 217, 184, .9);
}

#form #submit {
    width: 150px;
    background: lightgrey;
    color: black;
    padding-bottom: 10px;
    border: none;
}

.features{
    color: lightgrey;
    font-size: large;
    max-width: 1000px;
    margin: 0 auto 50px;
    /* border: 2px solid white; */
}

.feature {
    display: flex;
}

.feature div {
    /* border: 2px solid white; */
    /* height: 100px;
    width: 100px; */
}

.feature div:first-of-type {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100px;
    width: 100px;
}

.feature h2 {
    font-weight: 600;
}

.feature div:last-of-type {
    width: 100%;
    padding: 0 5px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

i {
    /* border: 2px solid white; */
    color: rgba(242, 217, 184, .9);
}

#vid-container {
    display: flex;
    justify-content: center;
    /* border: 2px solid lightgrey; */
    margin-bottom: 50px;
}

.pricing {
    margin: 0 auto;
    width: 100%;
    max-width: 1000px;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-evenly;
    gap: 30px;
    padding: 0 10px;
    margin-bottom: 50px;
}

.product {
    width: 100%;
    border: 1px solid lightgrey;
    display: flex;
    flex-direction: column;
    align-items: center;
    /* gap: 20px; */
    padding-bottom: 10px;
    border-radius: 5px;
}

.product h2, .product p, .product button {
    color: lightgrey;
    /* border: 2px solid white; */
    text-align: center;
    padding-bottom: 5px
}

.product h2 {
    width: 100%;
    font-weight: 600;
}

.product-title {
    background: linear-gradient(rgba(242, 217, 184, .9),black);
    margin-bottom: 10px;
}

.product-img {
    width: 100%;
    height: 100%;
}

.product-img img {
 width: 100%;
 height: 300px;
object-fit: cover;
}


.product button {
    border-radius: 5px;
    color:rgba(242, 217, 184, .9);
    font-size: 1.2rem;
    border: 1px solid lightgrey;
    padding: 10px;
}

.product button:hover {
    color: black;
    background-color: rgba(242, 217, 184, .9);
    ;
}

footer {
    /* border: 1px solid white; */
    width: 100%;
    display: flex;
    color: lightgrey;
    justify-content: flex-end;
    align-items: flex-end;
}

footer p {
    padding: 0 10px 10px 0;
}

@media (max-width: 600px) {
    .link-container {
        flex-direction: column;
    }

    main {
        top: 220px;
    }

    #vid-container {
        position: relative;
        padding-bottom: 56.25%;
    }

    #video {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
    }

    .pricing {
        flex-direction: column;
    }

    .product {
        width: 95%;
        margin: 0 auto;
    }

}

@media (max-width: 370px) {

    #nav-bar {
        height: 100%;
    }

    main {
        top: 170px;
    }

    .logo {
        /* display: flex; */
        width: 50%;
        /* height: 50%; */
        min-width: 50%;
    }

    .link-container {
        width: 50%;
        /* justify-content: space-between; */
    }

    .nav-link a {
        font-size: 1em;
    }

    #form h2 {
        text-align: center;
    }
}

